# openai-rs

./: .gitignore  Agents.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README.zh.md  _typos.toml  deny.toml
.github/workflows/: ci.yml  compatibility.yml  live.yml  release.yml
codegen/: endpoints.json
codegen/openapi/: contracts.json  metadata.json  openapi.documented.json
docs/: api-reference.md  azure.md  crate-docs.md  examples.md  faq.md  migration.md  observability.md  openapi-contract.md  provider-capability-matrix.md  public-api.md  realtime-and-streaming.md  release-checklist.md  runtime-event-contract.md  structured-output-and-tools.md
docs/adr/: 0001_codegen_strategy.md  0002_runtime_module_boundaries.md
downstream-canaries/default_consumer/: Cargo.toml
downstream-canaries/default_consumer/src/: main.rs
downstream-canaries/realtime_consumer/: Cargo.toml
downstream-canaries/realtime_consumer/src/: main.rs
downstream-canaries/structured_tools_consumer/: Cargo.toml
downstream-canaries/structured_tools_consumer/src/: main.rs
ecosystem-tests/fixtures/axum_webhook/: Cargo.toml
ecosystem-tests/fixtures/axum_webhook/src/: main.rs
ecosystem-tests/fixtures/chat_completion_client/: Cargo.toml
ecosystem-tests/fixtures/chat_completion_client/src/: main.rs
ecosystem-tests/fixtures/realtime_client/: Cargo.toml
ecosystem-tests/fixtures/responses_tools_client/: Cargo.toml
ecosystem-tests/fixtures/responses_ws_client/: Cargo.toml
ecosystem-tests/fixtures/structured_output_client/: Cargo.toml
ecosystem-tests/fixtures/structured_output_client/src/: main.rs
ecosystem-tests/fixtures/tokio_responses_client/: Cargo.toml
examples/: assistants_poll.rs  assistants_stream.rs  assistants_stream_raw.rs  audio_roundtrip.rs  azure_chat.rs  azure_realtime_ws.rs  chat_params_types.rs  chat_stream.rs  errors.rs  files_upload.rs  fine_tuning.rs  fine_tuning_data.jsonl  function_call.rs  function_call_stream.rs  function_call_stream_raw.rs  image_stream.rs  logging.rs  logprobs.rs  openai_chat.rs  openai_responses.rs  pagination.rs  parsing.rs  parsing_stream.rs  parsing_tools.rs  parsing_tools_stream.rs  raw_response.rs  realtime_ws.rs  responses_stream.rs  responses_stream_background.rs  responses_streaming_tools.rs  responses_structured_outputs.rs  responses_structured_outputs_tools.rs  responses_websocket.rs  speech_to_text.rs  stream_to_client_ndjson.rs  stream_to_client_raw.rs  stream_to_client_sse.rs  text_to_speech.rs  tool_runner.rs  ui_generation.rs  (+1 more)
examples/support/: mod.rs
public-api/: all-features.txt
scripts/: check-downstream-canaries.sh  check-ecosystem.sh  check-public-api.sh  check-release.sh  ecosystem_smoke_server.py  generate_endpoints.py  update-public-api.sh  update_openapi_snapshot.sh
specs/: 0001.md  0002.md  0003_improve.md  0004.md  0005.md  0006.md  0007_live_providers.md  0008.md  0009_improve_phase.md  0010_diff.md  0011_diff.md  coverage_matrix.md
src/: audio_helpers.rs  auth.rs  client.rs  config.rs  error.rs  json_payload.rs  lib.rs  resource.rs  response_meta.rs
src/files/: mod.rs
src/helpers/: mod.rs
src/pagination/: mod.rs
src/providers/: mod.rs
src/resources/: audio.rs  batches.rs  beta.rs  chat.rs  common.rs  containers.rs  conversations.rs  core.rs  evals.rs  files.rs  fine_tuning.rs  images.rs  longtail.rs  mod.rs  responses.rs  skills.rs  uploads.rs  vector_stores.rs  videos.rs  webhooks.rs
src/stream/: assistant.rs  chat.rs  mod.rs  partial_json.rs  responses.rs  sse.rs  value_helpers.rs
src/transport/: mod.rs
src/webhooks/: mod.rs
src/websocket/: core.rs  events.rs  mod.rs
tests/: azure.rs  contract.rs  files.rs  logger.rs  openapi_contract.rs  parser.rs  path_query.rs  provider_live.rs  retry_timeout.rs  snapshots.rs  spec_contract.rs  typed_endpoints.rs  uploads.rs  websocket.rs
tests/contract/: client.rs  longtail.rs  resources.rs
tests/provider_live/: common.rs  minimax.rs  openai.rs  zenmux.rs  zhipu.rs
tests/snapshots/: snapshots__api_error_mapping.snap  snapshots__assistant_runtime_final_snapshot_contract.snap  snapshots__chat_completion_request_body.snap  snapshots__content_filter_finish_reason_error.snap  snapshots__realtime_websocket_event_decode.snap  snapshots__response_runtime_out_of_order_contract.snap  snapshots__response_stream_aggregation.snap  snapshots__responses_websocket_event_decode.snap  snapshots__send_with_meta_response_meta.snap
tests/spec_fixtures/: batch.json  beta_realtime_session.json  chat_completion.json  chatkit_session.json  completion.json  embedding.json  grader_run.json  moderation.json  realtime_client_secret.json  response.json
(+4 files in other folders)
