[package]
name = "openai-rs"
version = "0.1.0"
edition = "2024"
description = "面向 OpenAI 兼容生态的 Rust SDK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/openai/openai-node"

[lib]
name = "openai_rs"
path = "src/lib.rs"

[features]
default = ["stream", "multipart", "webhooks", "structured-output", "tool-runner", "rustls-tls", "realtime", "responses-ws"]
stream = []
multipart = []
webhooks = []
realtime = ["tokio-tungstenite"]
responses-ws = ["tokio-tungstenite"]
structured-output = []
tool-runner = ["structured-output"]
rustls-tls = []

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
futures-util = "0.3.32"
hmac = "0.13.0"
http = "1.4.0"
mime_guess = "2.0.5"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "multipart", "query", "rustls", "stream"] }
schemars = { version = "1.2.1", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = { version = "0.1.44", features = ["attributes"] }
url = "2.5.8"

[dev-dependencies]
dotenvy = "0.15.7"
insta = "1.47.2"
proptest = "1.11.0"
rstest = "0.26.1"
serial_test = "3.4.0"
tracing-subscriber = "0.3.23"
wiremock = "0.6.5"
