[package]
name = "structured_tools_consumer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
openai-rs = { path = "../../", default-features = false, features = ["structured-output", "tool-runner", "rustls-tls"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
