[package]
name = "structured_output_client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
openai-core = { path = "../../../", default-features = false, features = ["structured-output", "rustls-tls"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
